--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.9",
+    "axios": "^1.9.0",
     "framer-motion": "^12.4.11",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
